# Ruinique-LU-factorization

./: CMakeLists.txt  common.h  cuda-tool.h  lu-factorization-with-pivoting-cuslover.h  lu_factorization_comparison_4090.csv  lu_factorization_times.csv  start.sh  test-gpu.cu  time_comparsion.py
